# MY-LOG-BE

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: deploy.yml
caddy/: Caddyfile
collector_output/: collector_proj1.yml  collector_proj2.yml
common/interface/: validators.py
common/service/: paging.py
config/: celery.py  settings.py  urls.py  views.py  wsgi.py
monitoring/: apps.py
monitoring/domain/: monitoring_project.py  task_result.py
monitoring/interface/: urls.py
monitoring/migrations/: 0002_remove_taskresultmodel_task_id_and_more.py  0003_monitoringprojectmodel.py  0004_dashboardmodel_project_and_more.py  0005_alter_serviceaccountmodel_account_id.py  0006_monitoringprojectmodel_service_account_and_more.py  0007_publicdashboardmodel_and_more.py
monitoring/service/: exceptions.py  harvester_agent_service.py  monitoring_project_service.py  monitoring_provision_service.py
monitoring_provisioner/: apps.py
monitoring_provisioner/domain/: grafana_dashboard.py  task_result.py
monitoring_provisioner/interface/: urls.py
monitoring_provisioner/migrations/: 0001_initial.py  0002_taskresultmodel_date_started.py
monitoring_provisioner/service/: harvester_agent_service.py  monitoring_dashboard_service.py  monitoring_provision_service.py
router_output/: router_proj2.yml
scripts/: start-celery.sh
user/: apps.py
user/domain/: user.py
user/infra/oauth/: google.py
user/migrations/: 0001_initial.py
user/service/: user_service.py
util/: architecture.excalidraw
(+138 files in other folders)
